--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top" class="body">
+    <body class="body">
         <!-- Navigation-->
-        <nav class="navbar d-none d-md-flex navbar-expand-md  text-uppercase fixed-top py-2" id="mainNav">
+        <nav id="mainNav" class="navbar d-none d-md-flex navbar-expand-md  text-uppercase fixed-top py-2">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">katie brouwers</a>
                 <div>
@@ -32,8 +32,8 @@
             </div>
         </nav>
 
-        <header class="masthead px-lg-2">
-            <h1>I'm Katie.</h1><h2> I am a Designer <span>&</span> Developer with 3+ years experience <span>&</span> a passion for designing <span>&</span> building meaningful, functional, <span>&</span> accessible experiences.</h2>
+        <header class="masthead px-lg-2" id="page-top">
+            <h1>I'm Katie.</h1><p class="text-large"> I am a Designer <span>&</span> Developer with 3+ years experience <span>&</span> a passion for designing <span>&</span> building meaningful, functional, <span>&</span> accessible experiences.</p>
             <a href="#work" class="scroll-btn js-scroll-trigger">
                 <button type="button" class="btn btn-lg button">
                     See my work
@@ -44,7 +44,7 @@
             </a>
         </header>
         <section class="page-section card-section mt-3 mt-md-0" id="work">
-            <h3>My work</h3>
+            <h2>My work</h2>
             <div class="cards d-flex flex-column mt-5 mb-5">
 
                 <a href="instacart.html">
@@ -54,8 +54,8 @@
                                 <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title work">Instacart</h5>
-                        <h6 class="card-subtitle work">UX Research & Design</h6>
+                        <h4 class="card-title work">Instacart</h4>
+                        <h5 class="card-subtitle work">UX Research & Design</h5>
                     </div>
                 </a>
             </div>
@@ -68,8 +68,8 @@
                                 <path d="M7 13.5h2V16H7v-2.5z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title work">Leafi</h5>
-                        <h6 class="card-subtitle work">Design & Development</h6>
+                        <h4 class="card-title work">Leafi</h4>
+                        <h5 class="card-subtitle work">Design & Development</h5>
                     </div>
                 </a>
                 
@@ -80,8 +80,8 @@
                                 <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title work">Gorib</h5>
-                        <h6 class="card-subtitle work">Development</h6>
+                        <h4 class="card-title work">Gorib</h4>
+                        <h5 class="card-subtitle work">Development</h5>
                     </div>
                 </a>
                 
@@ -94,16 +94,16 @@
                                 <path fill-rule="evenodd" d="M6 8V1h1v6.117L8.743 6.07a.5.5 0 0 1 .514 0L11 7.117V1h1v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title work">writeAbout</h5>
-                        <h6 class="card-subtitle">Design & Development</h6>
+                        <h4 class="card-title work">writeAbout</h4>
+                        <h5 class="card-subtitle">Design & Development</h5>
                     </div>
                 </a>
 
             </div>
         </section>
-        <footer class="footer text-center my-5" id="footer">
+        <footer class="footer text-center my-5 my-xl-0" id="footer">
             <div class="container">
-                <h3 class="text-uppercase mb-4">Let's Connect</h3>
+                <h4 class="text-uppercase">Let's Connect</h4>
                 <div>
                     <a href="https://linkedin.com/in/katie-brouwers" target="_blank">
                         <svg height="682pt" viewBox="-21 -35 682.66669 682" width="682pt" xmlns="http://www.w3.org/2000/svg"><path d="m77.613281-.667969c-46.929687 0-77.613281 30.816407-77.613281 71.320313 0 39.609375 29.769531 71.304687 75.8125 71.304687h.890625c47.847656 0 77.625-31.695312 77.625-71.304687-.894531-40.503906-29.777344-71.320313-76.714844-71.320313zm0 0"/><path d="m8.109375 198.3125h137.195313v412.757812h-137.195313zm0 0"/><path d="m482.054688 188.625c-74.011719 0-123.640626 69.546875-123.640626 69.546875v-59.859375h-137.199218v412.757812h137.191406v-230.5c0-12.339843.894531-24.660156 4.519531-33.484374 9.917969-24.640626 32.488281-50.167969 70.390625-50.167969 49.644532 0 69.5 37.851562 69.5 93.339843v220.8125h137.183594v-236.667968c0-126.78125-67.6875-185.777344-157.945312-185.777344zm0 0"/></svg>
