--- a/instacart.html
+++ b/instacart.html
@@ -28,11 +28,11 @@
         <!-- Navigation-->
         <nav class="navbar d-none d-md-flex navbar-expand-md  text-uppercase fixed-top py-2" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">katie brouwers</a>
+                <a class="navbar-brand js-scroll-trigger" href="index.html">katie brouwers</a>
                 <div>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="index.html#work">Projects</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
                     </ul>
                 </div>
@@ -81,7 +81,7 @@
         </section>
         <section class="page-section mb-1">  
             <div class="text-center colour-block">
-                <h3 class="quote">Here is an interesting quote about something really cool.</h3>
+                <p class="quote">Here is an interesting quote about something really cool.</p>
             </div>
         </section>
         <section class="page-section p-4 p-xl-0 mb-1">
@@ -89,7 +89,7 @@
                 <h2>Background</h2>
                 <p>When I decided to do a UX case study on Instacart, my intent was to learn if individuals find the flow of <span>   research - select - buy</span> to work as expected, and in turn, uncover how/if this flow can be improved upon.</p>
                 <p>I created a Research Report outlining my methodology, participant requirements, and how I would calculate or determine my findings.</p>
-                <h3 class="quote text-center my-4">I chose to use remote, unmoderated usability testing, and the System Usability Scale to analyze my results.</h3>
+                <p class="quote text-center my-4">I chose to use remote, unmoderated usability testing, and the System Usability Scale to analyze my results.</p>
                 <p>I conducted my usability testing on 6 participants - 3 who had used the app before, and 3 who had not, and had them complete a series of task-based instructions.</p>
             </div>
         </section>
@@ -114,7 +114,7 @@
                     <li>I wanted full transparency around checkout fees</li>
                     <li>I wanted users to be confident in the Instacart platform to improve customer retention</li>
                 </ul>
-                <p>As a starting point, I began creating prototypes of how I envisioned my goals to pan out. Check them out <a href="#prototypes" class="js-scroll-trigger link">below</a>.</p>
+                <p>As a starting point, I began creating prototypes of how I envisioned my goals to pan out. Check them out <a href="#designs" class="js-scroll-trigger link">below</a>.</p>
             </div>
         </section>
         <section class="page-section mb-1">
@@ -123,17 +123,17 @@
                 <p>show a list of photos from my paper prototypes then maybe a button to the digital prototype</p>
                 <div class="prototype-images mt-5">
                     <div class="prototype-image-container p-0 mb-5 col-12">
-                        <h5>Landing Page Screen</h5>
+                        <h3>Landing Page Screen</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <img class="d-flex prototype-image rough m-auto" src="assets/img/PaperPrototypeRough.png" alt=""/>
                     </div>
                     <div class="prototype-image-container p-0 mb-5 col-12">
-                        <h5>Proposed Flow</h5>
+                        <h3>Proposed Flow</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <img class="d-flex prototype-image final m-auto" src="assets/img/PaperPrototypeFinal.png" alt=""/>
                     </div>
                     <div class="prototype-image-container p-0 mb-5 col-12">
-                        <h5>Digital Prototype</h5>
+                        <h3>Digital Prototype</h3>
                         <p>I created an interactive, digital prototype based on my paper protptype - see it <span>
                             <a href="https://www.figma.com/proto/gEgUFGYCJms95PQxgWbAa8/Hi-Fi?node-id=5%3A9&scaling=min-zoom" class="link" target="_blank">here</a>
                         </span>.</p>
@@ -173,9 +173,9 @@
                 <p>In summary, I found many pieces of important and interesting information while conducting the entirety of this study. I do believe that I found an effective resolution to a known pain point that would be worth it to implement on the condition that further testing be conducted to find the best spot to place a link to checkout fees.</p>
             </div>            
         </section>
-        <footer class="footer text-center my-5" id="footer">
+        <footer class="footer text-center my-5 my-xl-0" id="footer">
             <div class="container">
-                <h3 class="text-uppercase mb-4">Let's Connect</h3>
+                <h4 class="text-uppercase">Let's Connect</h4>
                 <div>
                     <a href="https://linkedin.com/in/katie-brouwers" target="_blank">
                         <svg height="682pt" viewBox="-21 -35 682.66669 682" width="682pt" xmlns="http://www.w3.org/2000/svg"><path d="m77.613281-.667969c-46.929687 0-77.613281 30.816407-77.613281 71.320313 0 39.609375 29.769531 71.304687 75.8125 71.304687h.890625c47.847656 0 77.625-31.695312 77.625-71.304687-.894531-40.503906-29.777344-71.320313-76.714844-71.320313zm0 0"/><path d="m8.109375 198.3125h137.195313v412.757812h-137.195313zm0 0"/><path d="m482.054688 188.625c-74.011719 0-123.640626 69.546875-123.640626 69.546875v-59.859375h-137.199218v412.757812h137.191406v-230.5c0-12.339843.894531-24.660156 4.519531-33.484374 9.917969-24.640626 32.488281-50.167969 70.390625-50.167969 49.644532 0 69.5 37.851562 69.5 93.339843v220.8125h137.183594v-236.667968c0-126.78125-67.6875-185.777344-157.945312-185.777344zm0 0"/></svg>
