--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
             </div>
             
             <div class="d-flex flex-column align-center mt-5">
-                <div class="colour-block">
+                <div class="p-4 p-xl-0">
                     <h1>Hi there!</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eveniet itaque aperiam ratione, sapiente a ea omnis, praesentium illum ex est eum, nesciunt velit! Illo repudiandae iusto amet blanditiis veniam!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, excepturi veniam necessitatibus facere dolor illo, quis natus quibusdam voluptatibus cumque doloribus tenetur. Animi deleniti facere ea! Cumque culpa ipsa sunt possimus soluta minima, voluptatibus omnis totam, quis odit fuga maxime.</p>
+                    <p>My name is Katie, and I am passionate about creating an inclusive, seamless, and engaging online experience for all walks of life. I believe in diving deep into the digital realm to get an indepth understanding of what folks need in order to succeed in the online world.</p> 
+                    <p>For some, it is a fully accessible experience. For others, it is a beautifully designed, interactive website that wows them. I believe it is my job to find the perfect intersect between the two. To do that, I needed to learn UX Design, so that I could combine my coding skills with a deep understanding of user experience, in order to uncover more ways to do my job as best as I possibly can.</p>
                 </div>
             </div>
         </section>
@@ -134,7 +134,7 @@
                 </div>
         </section>
         <section class="page-section about-section more-info pt-0">
-            <div class="colour-block">
+            <div class="p-4 p-xl-0">
                 <h2 class="mb-2 text-center">More about me</h2>
                 <p>
                     I am <span>OBSESSED</span> with crocheting! In both of the photos above, I am wearing a handmade toque, and a handmade cowl
