--- a/instacart.html
+++ b/instacart.html
@@ -81,7 +81,7 @@
         </section>
         <section class="page-section mb-1">  
             <div class="text-center colour-block">
-                <p class="quote">Here is an interesting quote about something really cool.</p>
+                <p class="quote">My goal was to analyze the flow of: research - select - buy</p>
             </div>
         </section>
         <section class="page-section p-4 p-xl-0 mb-1">
@@ -120,21 +120,21 @@
         <section class="page-section mb-1">
             <div class="colour-block" id="designs">
                 <h2>Designs</h2>
-                <p>show a list of photos from my paper prototypes then maybe a button to the digital prototype</p>
+                <p>The progression on my prototype, from lo-fi to mid-fidelity paper prototypes, to a digital interactive version.</p>
                 <div class="prototype-images mt-5">
                     <div class="prototype-image-container p-0 mb-5 col-12">
                         <h3>Landing Page Screen</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>A very rough draft of a store landing page, plus the page a user would see if they clicked on the More Info link.</p>
                         <img class="d-flex prototype-image rough m-auto" src="assets/img/PaperPrototypeRough.png" alt=""/>
                     </div>
                     <div class="prototype-image-container p-0 mb-5 col-12">
                         <h3>Proposed Flow</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>A more official drawup of the flow I wanted to test, from the landing page, to the checkout fees page, to the final cart page.</p>
                         <img class="d-flex prototype-image final m-auto" src="assets/img/PaperPrototypeFinal.png" alt=""/>
                     </div>
                     <div class="prototype-image-container p-0 mb-5 col-12">
                         <h3>Digital Prototype</h3>
-                        <p>I created an interactive, digital prototype based on my paper protptype - see it <span>
+                        <p>My digital hi-fidelity prototype, including clickable elements - see it <span>
                             <a href="https://www.figma.com/proto/gEgUFGYCJms95PQxgWbAa8/Hi-Fi?node-id=5%3A9&scaling=min-zoom" class="link" target="_blank">here</a>
                         </span>.</p>
                         <img class="d-flex prototype-image final m-auto" src="assets/img/prototypeDigital.png" alt=""/>
