--- a/instacart.html
+++ b/instacart.html
@@ -155,22 +155,22 @@
                         100% of users were surprised at the placement of the Checkout Fees and More Info button on the home page, and felt it looked more like simple information rather than an actual link
                     </li>
                 </ul>
-                <p>In summary, both users appreciated learning about checkout fees early in their shopping journey, but may not have found this important information on their own, with the flow I had created</p>
+                <p>In summary, both users appreciated learning about checkout fees early in their shopping journey, but may not have found this important information on their own, with the flow I had created.</p>
             </div>
         </section>
         <section class="page-section mb-1">
             <div class="colour-block" id="keyTakeaways">
                 <h2>Key Takeaways & Recommendations</h2>
                 <p>My second round of testing uncovered two key points.</p>
-                <p>First, having important information like checkout fees directly on a stores landing page, as opposed to only on the last page of the shopping journey, improved customer trust and confidence in shopping on Instacart by 100%. My participants agreed that they felt much more knowedgeable and comfortable with what fees they were paying by having the ability to access a breakdown of that information so early into their shopping.</p>
+                <p>First, having important information like checkout fees directly on a stores landing page, as opposed to only on the last page of the shopping journey, improved customer trust and confidence in shopping on Instacart by 100%. My participants agreed that they felt much more knowedgeable and comfortable with what fees they were paying by having the ability to access a breakdown of that information so early into their shopping journey.</p>
                 <p>However, my second key finding was that I failed to provide the most effective way for a customer to find this important information. I chose to place a link to checkout fees directly under a store's logo under <span>More Info</span>, but both participants felt that it did not 'feel' like a clickable link, and initially thought the link was simply general - unclickable - information.</p>
-                <p>If I were to move forward on this study, my next step would be to consider these options:</p>
+                <p>If I were to move forward with this study, my next step would be to consider these options:</p>
                 <ul>
                     <li>Return to the drawing board and find a better location within the store's landing page to place a link for checkout fee information</li>
                     <li>Place a tooltip that would show up on a first visit, indicating to a user that they can find more information by clicking on that link</li>
                     <li>Add an interative guided tour where I would point out the link to the user on their first visit</li>
                 </ul>
-                <p>In summary, I found many pieces of important and interesting information while conducting the entirety of this study. I do believe that I found an effective resolution to a known pain point that would be worth it to implement on the condition that further testing be conducted to find the best spot to place a link to checkout fees.</p>
+                <p>In summary, I found many pieces of important and interesting information while conducting the entirety of this study. I do believe that I found an effective resolution to a known pain point that would be worthwhile to implement if further testing could be conducted to find the best spot to place a link to checkout fees.</p>
             </div>            
         </section>
         <footer class="footer text-center my-5 my-xl-0" id="footer">
@@ -190,7 +190,7 @@
             <div class="container">
                 <ul class="d-flex">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="index.html#work">Projects</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
                 </ul>
             </div>
