--- a/index.html
+++ b/index.html
@@ -47,6 +47,35 @@
             <h2>My work</h2>
             <div class="cards d-flex flex-column mt-5 mb-5">
 
+                <a href="snowmountain.html">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work yellow">
+                            <svg width="66" height="53" viewBox="0 0 66 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19.9042 25.9505L27.1285 15.6631L34.3551 25.9527C29.7705 23.9718 24.4857 23.9703 19.9042 25.9505Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M2.44897 50.8025L27.1271 15.6636L39.4665 33.2341L34.8403 39.8203L30.2141 33.2327L17.8746 50.8025H2.44897Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M50.5264 31.409L45.6379 24.4473L40.7495 31.4068C43.8172 29.9464 47.4556 29.9464 50.5264 31.409Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M42.5503 50.8024L34.8401 39.8202L45.6373 24.4473L64.1422 50.8024H42.5503Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M17.8748 50.8027L30.2143 33.2329L42.5506 50.8027H17.8748Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M42.5482 43.8506L47.1768 37.2607L51.803 43.8506L47.1768 37.2607L42.5482 43.8506Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M12.4745 44.2141L15.5608 39.8203L18.6431 44.2141L15.5608 39.8203L12.4745 44.2141Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M39.4666 33.2341L45.6375 24.4473L49.6213 30.12C51.1991 28.1925 52.1454 25.7775 52.1454 23.1465C52.1454 16.8582 46.7773 11.7603 40.1514 11.7603C35.2422 11.7603 31.0262 14.5625 29.17 18.5705L39.4666 33.2341Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M32.6088 5.86475L34.2475 9.62087L32.6088 5.86475Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M40.1514 2V8.50788V2Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M54.401 28.7505L58.3586 30.3068L54.401 28.7505Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M24.3969 8.19385L29.2452 12.794L24.3969 8.19385Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M58.3592 15.9878L54.3993 17.5434L58.3592 15.9878Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M62.4268 23.1465H55.5742H62.4268Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M47.6918 5.86475L46.053 9.62087L47.6918 5.86475Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M55.9029 8.19385L51.0569 12.794L55.9029 8.19385Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                        </div>
+                        <h4 class="card-title work">Snow Mountain</h4>
+                        <h5 class="card-subtitle work">Graphic Design</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="cards d-flex flex-column mt-5 mb-5">
+
                 <a href="instacart.html">
                     <div class="card work" style="width: 100%;">
                         <div class="card-body work blue">
