--- a/snowmountain.html
+++ b/snowmountain.html
@@ -63,6 +63,9 @@
                         </div>
                         <div class="col-12 col-lg-8 p-0">
                             <h2>Style Guide</h2>
+                            <a href="https://www.figma.com/file/NiwIhGvu8FnYYrHoUCXsC6/Untitled?node-id=0%3A1" target="_blank" class="mockup-btn">
+                                <button type="button" class="mb-3 btn button">View in figma</button>
+                            </a>
                             <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FNiwIhGvu8FnYYrHoUCXsC6%2FUntitled%3Fnode-id%3D1%253A386%26scaling%3Dscale-down-width" allowfullscreen></iframe>
                         </div>
                     </div>
